--- a/MyProject/css/styles.css
+++ b/MyProject/css/styles.css
@@ -14,7 +14,7 @@ body {
 
 .container {
     display: flex;
-    background: rgb(114, 114, 114);
+    background: #fff;
     justify-content: center;
     align-items: center;
     flex-direction: column;
